kubernetes/overlays/homelab/traefik/generated/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: traefik
  namespace: traefik

spec:
  gatewayClassName: traefik
  listeners:
    # HTTP to HTTPS redirect
    - name: web
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same

    # Local Services
    - name: websecure
      port: 8443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: chat-knlim-dev-tls
            kind: Secret
          - name: immich-knlim-dev-tls
            kind: Secret
          - name: jellyfin-knlim-dev-tls
            kind: Secret
          - name: open-webui-knlim-dev-tls
            kind: Secret
          - name: otterwiki-knlim-dev-tls
            kind: Secret
          - name: photos-knlim-dev-tls
            kind: Secret
          - name: romm-knlim-dev-tls
            kind: Secret
          - name: traefik-knlim-dev-tls
            kind: Secret
          - name: vikunja-knlim-dev-tls
            kind: Secret
          - name: wiki-knlim-dev-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - chat
                  - immich
                  - jellyfin
                  - open-webui
                  - otterwiki
                  - photos
                  - romm
                  - traefik
                  - vikunja
                  - wiki
